--- a/source/slides/angular/angular.html
+++ b/source/slides/angular/angular.html
@@ -2,7 +2,7 @@
 
 <meta charset="utf-8">
 
-<title>AngularJS</title><script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script><script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script><script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js"></script><link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/themes/base/jquery-ui.css"><script type="text/javascript">
+<title>AngularJS</title><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script><script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script><script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js"></script><link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/themes/base/jquery-ui.css"><script type="text/javascript">
   angular.module('samples', ['ng']);
   jQuery(function() {
     jQuery('.sample.ng').each(function() {
