--- a/source/slides/angular33/angular-slides.html
+++ b/source/slides/angular33/angular-slides.html
@@ -663,6 +663,13 @@ describe("TodoController", function() {
 
 <section>
 <figure>
+<img src="powow.png" />
+</figure>
+<footer>Software Consultant at <a href="http://www.powow.no">Powow</a></footer>
+</section>
+
+<section>
+<figure>
 <img src="hypnotoad.gif" />
 <figcaption>you shall ask<br>questions now</figcaption>
 </figure>
