--- a/source/slides/angular33/angular33.html
+++ b/source/slides/angular33/angular33.html
@@ -572,7 +572,7 @@
 </section><section><h1>Cleaner code with less callbacks an boilerplate</h1>
 </section><section><h1>Build your own HTML</h1>
 </section><section><h1>@apohorecki<br>github.com/psyho</h1>
-</section><section><figure><img src="powow.png"></figure><footer>Software Consultant at <a href="http://www.powow.no">Powow</a></footer></section><section><figure><img src="hypnotoad.gif"><figcaption>you shall ask<br>questions now</figcaption></figure></section><section><h1>Thank you</h1>
+</section><section><figure><img src="hypnotoad.gif"><figcaption>you shall ask<br>questions now</figcaption></figure></section><section><h1>Thank you</h1>
 </section><style type="text/css">
 div.highlight, .sample {
   font-size: 0.7em;
