added about me to clojure slides

--- a/source/slides/clojure-lambda/clojure-lt.html
+++ b/source/slides/clojure-lambda/clojure-lt.html
@@ -790,6 +790,17 @@ notification_builder.build(events)
 </section>
 
 <section>
+<h1>@apohorecki<br>github.com/psyho</h1>
+</section>
+
+<section>
+<figure>
+<img src="powow.png" />
+</figure>
+<footer>Software Consultant at <a href="http://www.powow.no">Powow</a></footer>
+</section>
+
+<section>
 <h1>Thank you</h1>
 </section>
 
