--- a/source/slides/clojure-lambda/index.html
+++ b/source/slides/clojure-lambda/index.html
@@ -774,7 +774,8 @@
 </section><section class="img"><img src="clojure-programming.gif"></section><section><h1><a href="https://leanpub.com/fp-oo">Functional Programming for Object-Oriented Programmer</a></h1>
 </section><section class="img" style="margin-top: 125px"><img src="fp-oo.jpg"></section><section><h1><a href="http://shop.oreilly.com/product/0636920025139.do">ClojureScript Up and Running</a></h1>
 </section><section class="img" style="margin-top: 75px"><img src="clojurescript.jpg"></section><section><h1><a href="http://4clojure.com">4clojure.com</a></h1>
-</section><section><h1>Thank you</h1>
+</section><section><h1>@apohorecki<br>github.com/psyho</h1>
+</section><section><figure><img src="powow.png"></figure><footer>Software Consultant at <a href="http://www.powow.no">Powow</a></footer></section><section><h1>Thank you</h1>
 </section><style type="text/css">
   .smaller div.highlight{
     font-size: 0.6em;
