--- a/source/slides/bogus-krug/slides.html
+++ b/source/slides/bogus-krug/slides.html
@@ -603,6 +603,13 @@ end
 
 <section>
 <figure>
+<img src="powow.png" />
+</figure>
+<footer>Software Consultant at <a href="http://www.powow.no">Powow</a></footer>
+</section>
+
+<section>
+<figure>
 <img src="sckrk-large.png" alt="[sckrk]" />
 </figure>
 </section>
